--- a/charts/hdfs-k8s/requirements.yaml
+++ b/charts/hdfs-k8s/requirements.yaml
@@ -1,7 +1,7 @@
 dependencies:
   - name: zookeeper
     version: "1.3.1"
-    repository: https://kubernetes-charts-incubator.storage.googleapis.com/
+    repository: "file://../zookeeper"
     condition: condition.subchart.zookeeper
     tags:
       - ha
